--- a/app/views/cats/show.html.erb
+++ b/app/views/cats/show.html.erb
@@ -12,17 +12,28 @@
     </tr>
   <% end %>
 </table>
+<% if current_user.id == @cat.user_id %>
+  <%= link_to "Edit #{@cat.name}", edit_cat_url(@cat) %>
+<% end %>
 
-<%= link_to "Edit #{@cat.name}", edit_cat_url(@cat) %>
 
 <h2>Rental Requests</h2>
 <table>
   <tr>
+    <th>Renter</th>
     <th>Start Date</th>
     <th>End Date</th>
     <th>Status</th>
+    <th>Owner</th>
   </tr>
-  <% @cat.rental_requests.order("start_date").each do |req| %>
-    <%= render "req_tr", req: req %>
+  <% @cat.rental_requests.order("start_date").includes(:user).includes(:cat).each do |req| %>
+    <%= render "req_tr", req: req, cat: @cat %>
   <% end %>
 </table>
+
+<% if current_user.id != @cat.user_id %>
+  <%= link_to "Rent Cat!", new_cat_rental_request_url %>
+<% end %>
+<br><br>
+
+<%= link_to "All Cats", cats_url %>
